Line 엔티티의 구조 변경 및 코드 수정